add more field on schema of user /chat
