# apps/backend/user-service/src/docs/swagger.json
@@ -143,7 +143,10 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"UserCreationRequestParams": {
+			"mongoose.Types.ObjectId": {
+				"type": "string"
+			},
+			"UserCreationRequestParams2": {
 				"properties": {
 					"sub": {
 						"type": "string"
@@ -152,6 +155,9 @@
 						"type": "string"
 					},
 					"facebookSub": {
+						"type": "string"
+					},
+					"username": {
 						"type": "string"
 					},
 					"email": {
@@ -163,11 +169,91 @@
 					"profile": {
 						"type": "string"
 					},
-					"username": {
-						"type": "string"
-					},
 					"role": {
 						"type": "string"
+					},
+					"gender": {
+						"type": "string"
+					},
+					"age": {
+						"type": "number",
+						"format": "double"
+					},
+					"favorites": {
+						"items": {
+							"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+						},
+						"type": "array"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"lastActive": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"lastSeen": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"sessions": {
+						"items": {
+							"properties": {
+								"lastLogin": {
+									"type": "string",
+									"format": "date-time"
+								},
+								"ipAddress": {
+									"type": "string"
+								},
+								"deviceId": {
+									"type": "string"
+								}
+							},
+							"required": [
+								"lastLogin",
+								"ipAddress",
+								"deviceId"
+							],
+							"type": "object"
+						},
+						"type": "array"
+					},
+					"privacySettings": {
+						"properties": {
+							"profilePhotoVisibleTo": {
+								"type": "string",
+								"enum": [
+									"everyone",
+									"contacts",
+									"nobody"
+								]
+							},
+							"lastSeenVisibleTo": {
+								"type": "string",
+								"enum": [
+									"everyone",
+									"contacts",
+									"nobody"
+								]
+							}
+						},
+						"required": [
+							"profilePhotoVisibleTo",
+							"lastSeenVisibleTo"
+						],
+						"type": "object"
+					},
+					"contacts": {
+						"items": {
+							"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
@@ -442,9 +528,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"mongoose.Types.ObjectId": {
-				"type": "string"
-			},
 			"IdParams": {
 				"properties": {
 					"_id": {
@@ -537,7 +620,16 @@
 					"username": {
 						"type": "string"
 					},
+					"email": {
+						"type": "string"
+					},
+					"phone_number": {
+						"type": "string"
+					},
 					"profile": {
+						"type": "string"
+					},
+					"role": {
 						"type": "string"
 					},
 					"gender": {
@@ -547,8 +639,91 @@
 						"type": "number",
 						"format": "double"
 					},
-					"role": {
-						"type": "string"
+					"favorites": {
+						"items": {
+							"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+						},
+						"type": "array"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"lastActive": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"lastSeen": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"sessions": {
+						"items": {
+							"properties": {
+								"lastLogin": {
+									"type": "string",
+									"format": "date-time"
+								},
+								"ipAddress": {
+									"type": "string"
+								},
+								"deviceId": {
+									"type": "string"
+								}
+							},
+							"required": [
+								"lastLogin",
+								"ipAddress",
+								"deviceId"
+							],
+							"type": "object"
+						},
+						"type": "array"
+					},
+					"privacySettings": {
+						"properties": {
+							"profilePhotoVisibleTo": {
+								"type": "string",
+								"enum": [
+									"everyone",
+									"contacts",
+									"nobody"
+								]
+							},
+							"lastSeenVisibleTo": {
+								"type": "string",
+								"enum": [
+									"everyone",
+									"contacts",
+									"nobody"
+								]
+							}
+						},
+						"required": [
+							"profilePhotoVisibleTo",
+							"lastSeenVisibleTo"
+						],
+						"type": "object"
+					},
+					"contacts": {
+						"anyOf": [
+							{
+								"items": {
+									"$ref": "#/components/schemas/mongoose.Types.ObjectId"
+								},
+								"type": "array"
+							},
+							{
+								"items": {
+									"type": "string"
+								},
+								"type": "array"
+							}
+						]
 					}
 				},
 				"type": "object",
@@ -673,7 +848,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/UserCreationRequestParams"
+								"$ref": "#/components/schemas/UserCreationRequestParams2"
 							}
 						}
 					}
@@ -1196,6 +1371,9 @@
 						}
 					}
 				},
+				"tags": [
+					"Health"
+				],
 				"security": [],
 				"parameters": []
 			}
